Added connection string to database

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PUMB_TestContext": "Data Source=.;Database=PUMBASE_V2;Trusted_Connection=True;MultipleActiveResultSets=true;Integrated Security=True"
+  }
 }
